@@ -32,7 +32,7 @@
 #include <R_ext/Boolean.h>
 
 /* filled contours and perspective plots were originally here,
-   now in graphics/src/plot3d.c .
+   now in ../library/graphics/src/plot3d.c .
  */
 
 #include "contour-common.h"
@@ -66,6 +66,8 @@ int addContourLines(double *x, int nx, double *y, int ny,
     int i, ii, j, jj, ns, dir, nc;
     SEGP seglist, seg, s, start, end;
     SEXP ctr, level, xsxp, ysxp, names;
+/// NB: The following is very much the same as in contour() in ../library/graphics/src/plot3d.c
+
     /* Begin following contours. */
     /* 1. Grab a segment */
     /* 2. Follow its tail */
